# RBI-Regulatory-Intelligence-System

./: .gitignore  README.md  main.py  pyproject.toml
notebook/: Master-Circulars-RAG.ipynb  learning_rag.ipynb
